<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AnyChat</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="global_nonetwork_title">Notice</string>
    <string name="global_nonetwork_msg">Network unavailable</string>
    <string name="global_nonetwork_okbtn">OK</string>
    <string name="global_servererr_title">Notice</string>
    <string name="global_servererr_msg">Server is not ready, Please check your server config.</string>
    <string name="global_servererr_okbtn">OK</string>
    <string name="global_serverset_ip">Server IP</string>
    <string name="global_serverset_port">Server port</string>
    <string name="global_serverset_confirmbtn">Confirm</string>
    <string name="global_serverset_empty">Please fill in the blank</string>
    <string name="global_common_progressdialog_msg">Please wait</string>
    <string name="global_success">Success</string>
    <string name="global_failed">Please try again later</string>
    <string name="login_username_input">Username</string>
    <string name="login_server_config_tv">Server Config</string>
    <string name="login_password_input">Password</string>
    <string name="login_loginbtn">Login</string>
    <string name="login_newbtn">New&#8230;</string>
    <string name="login_ok">Welcome</string>
    <string name="login_err">Can not login, make sure the correct username and password, and the network is available</string>
    <string name="login_remember_me">Save password</string>
    <string name="login_auto_login">Auto login</string>
    <string name="reg_username_input">Username</string>
    <string name="reg_password_input">Password</string>
    <string name="reg_password_confirm_input">Confirm</string>
    <string name="reg_regbtn">Register</string>
    <string name="reg_progressdialog_msg">Your account is being created, please wait&#8230;</string>
    <string name="reg_empty_username">Username can not be empty</string>
    <string name="reg_password_not_equal">Password is not the same</string>
    <string name="reg_reg_ok_question_title">Congratulations!</string>
    <string name="reg_reg_ok_question_msg">Your account has been created, do you want to login now?</string>
    <string name="reg_login_now">Login</string>
    <string name="reg_close">Close</string>
    <string name="reg_reg_err">Failed to registion</string>
    <string name="recent_title">Recent</string>
    <string name="friends_title">Friends</string>
    <string name="moreopr_title">More&#8230;</string>
    <string name="friends_searchet_hint">Search your friends</string>
    <string name="friends_addnew">Add&#8230;</string>
    <string name="myprofile_tip">You can modify your account detail information in here.</string>
    <string name="myprofile_morebtn_show">Show more item</string>
    <string name="myprofile_savebtn">Apply</string>
    <string name="myprofile_morebtn_dismiss">Show less item</string>
    <string name="myprofile_username">Your account:</string>
    <string name="myprofile_nickname">Nickname</string>
    <string name="myprofile_jid">ID</string>
    <string name="myprofile_fir_hint">First name</string>
    <string name="myprofile_mid_hint">Middle name</string>
    <string name="myprofile_last_hint">Last name</string>
    <string name="myprofile_workphone">Phone number</string>
    <string name="myprofile_workemail">E-mail address</string>
    <string name="myprofile_homephone">Phone number - Home</string>
    <string name="myprofile_homeemail">E-mail address - Home</string>
    <string name="myprofile_org">Organization</string>
    <string name="myprofile_orgunit">Organization Unit</string>
    <string name="myprofile_homeaddr">Home address</string>
    <string name="myprofile_workaddr">Company address</string>
    <string name="search_title">Search a person</string>
    <string name="search_searchhint">Start search here</string>
    <string name="search_startsearchbtn">Search</string>
    <string name="search_resulterr">Please try again</string>
    <string name="search_noresult">No result</string>
    <string name="vcardinfo_workphone">Phone No.:</string>
    <string name="vcardinfo_workmail">E-mail:</string>
    <string name="vcardinfo_org">Organization:</string>
    <string name="vcardinfo_addthisperson">Add to my contact</string>
    <string name="vcardinfo_title">\'s profile</string>
    <string name="vcardinfo_errtoload">An error has occurred</string>
    <string name="fileexplorer_storagenotavailable">The storage is not available</string>
    <string name="fileexplorer_okbtn">OK</string>
    <string name="fileexplorer_cancelbtn">Cancel</string>
    <string name="fileexplorer_uptv">..</string>
    <string name="fileexplorer_noparent">Not accessible</string>
    <string name="add_new_confirm_title">Notice</string>
    <string name="add_new_confirm_tip">Select the group:</string>
    <string name="add_new_confirm_add_group">Create new group</string>
    <string name="add_new_confirm_add_group_hint">Input the group name here</string>
    <string name="add_new_confirm_add_group_ok">Add</string>
    <string name="add_new_confirm_ok">OK</string>
    <string name="add_new_confirm_cancel">Cancel</string>
    <string name="add_new_confirm_empty_new_group">The group name can not be empty</string>
    <string name="add_new_confirm_empty_group">Please select a group or create a new group</string>
    <string name="add_new_confirm_group_create_ok">Done</string>
    <string name="add_new_confirm_group_create_err">Can not create this group</string>
    <string name="add_new_confirm_add_err">Add friend failed</string>
    <string name="add_new_confirm_add_ok">Done</string>

</resources>