<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dip" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dip" >

        <!-- 头像 -->

        <ImageView
            android:id="@+id/vcard_avator_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_launcher" />

        <!-- 用户名及jid -->

        <TextView
            android:id="@+id/vcard_username_tv"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:ellipsize="middle"
            android:padding="5dip"
            android:singleLine="true" />

        <!-- 公司 -->

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dip" >

            <TextView
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/vcardinfo_org" />

            <TextView
                android:id="@+id/vcard_org_tv"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="2"
                android:ellipsize="middle"
                android:singleLine="true" />
        </LinearLayout>

        <!-- 电话 -->

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dip" >

            <TextView
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/vcardinfo_workphone" />

            <TextView
                android:id="@+id/vcard_phone_tv"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="2"
                android:ellipsize="middle"
                android:singleLine="true" />
        </LinearLayout>

        <!-- 邮箱 -->

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dip" >

            <TextView
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/vcardinfo_workmail" />

            <TextView
                android:id="@+id/vcard_email_tv"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="2"
                android:ellipsize="middle"
                android:singleLine="true" />
        </LinearLayout>

        <!-- 添加好友按钮 -->

        <Button
            android:id="@+id/vcard_addthisperson_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="5dip"
            android:text="@string/vcardinfo_addthisperson" />
    </LinearLayout>

</ScrollView>