<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="5dip" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dip" >

        <TextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/global_serverset_ip" />

        <EditText
            android:id="@+id/serverset_ip_et"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:inputType="text"
            android:singleLine="true" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dip" >

        <TextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/global_serverset_port" />

        <EditText
            android:id="@+id/serverset_port_et"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:inputType="number"
            android:singleLine="true" />
    </LinearLayout>

    <Button
        android:id="@+id/serverset_confirmbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/global_serverset_confirmbtn" />

</LinearLayout>